--- a/src/app/components/app-navigation/app-navigation.component.scss
+++ b/src/app/components/app-navigation/app-navigation.component.scss
@@ -23,8 +23,4 @@ body {
 mat-toolbar {
   display: flex;
   align-items: center;
-
-  .spacer {
-    flex: 1; /* Pushes the next element to the right */
-  }
 }
